# CroMagRally

./: .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  THIRD-PARTY-LICENSES.md  build.py  build_android.ps1  build_android.sh  build_android_debug.sh  build_ios.sh  build_tvos.sh  version.properties
.github/workflows/: FullCompileCheck.yml  ReleaseBuilds.yml
AndroidBuild/: gradle.properties
AndroidBuild/app/: build.gradle  lint-baseline.xml
AndroidBuild/app/src/main/: AndroidManifest.xml
AndroidBuild/app/src/main/java/io/jor/cromagrally/: HIDDevice.java  HIDDeviceBLESteamController.java  HIDDeviceManager.java  HIDDeviceUSB.java  SDL.java  SDLActivity.java  SDLAudioManager.java  SDLControllerManager.java  SDLDummyEdit.java  SDLInputConnection.java  SDLSurface.java
AndroidBuild/app/src/main/java/org/libsdl/app/: HIDDeviceBLESteamController.java  HIDDeviceManager.java  HIDDeviceUSB.java  SDLActivity.java  SDLControllerManager.java  SDLSensorManager.java
AndroidBuild/app/src/main/res/values/: strings.xml
AndroidBuild/gradle/wrapper/: gradle-wrapper.properties
Data/Sprites/: gamepad.txt
Data/System/: gamecontrollerdb.txt  strings.csv
Source/: Boot.cpp
Source/3D/: Atlas.c  Camera.c  Effects.c  MetaObjects.c  OGL_Support.c
Source/Headers/: Android_GLES_Compatibility.h  RNG.h  bones.h  deterministic_math.h  file.h  game.h  input.h  localization.h  main.h  misc.h  net_validation.h  netsprocket.h  network.h  ogl_support.h  player.h  sobjtypes.h  version.h
Source/Items/: Items.c  Traps.c  Triggers.c
Source/Network/: NetHigh.c  NetLow.c  NetValidation.c
Source/Player/: Player.c  Player_Car.c  Player_Submarine.c  Player_Weapons.c  SkidMarks.c
Source/Screens/: Infobar.c  LocalGather.c  MainMenu.c  MiscScreens.c  NetGather.c  NetPause.c  Paused.c  PhysicsEditor.c  RaceTimes.c  SelectCharacter.c  SelectVehicle.c  UIEffects.c
Source/System/: Android_GLES_Compatibility.c  DeterministicMath.c  File.c  Input.c  InputControlBits.c  Localization.c  Main.c  Menu.c  Misc.c  Objects.c  RNG.c  TVOSStorage.h  TVOSStorage.m  TextUtils.c  UserDataValidation.c  Window.c
Source/Terrain/: SplineItems.c  Terrain.c  Terrain2.c
Tests/: LocalizationDataTests.py  ValidationTests.c  VersionMetadataTests.py
cmake/: FindSDL3.cmake
docs/: REVIEW.md  SUBMODULE-AUDIT.md  WIFI-NETCODE-CMR7.md
docs/Manual/: index.html
iOSBuild/: README.md
iOSBuild/CroMagRally/: Info.plist  LaunchScreen.storyboard
iOSBuild/CroMagRally/Assets.xcassets/LaunchImage.imageset/: Contents.json
packaging/: PKGBUILD  ReadMe.txt.in  cromagrally-launcher  io.jor.cromagrally.appdata.xml  io.jor.cromagrally.desktop
packaging/flatpak/: io.jor.cromagrally.yml
tvOSBuild/CroMagRally/: Info.plist  LaunchScreen.storyboard
tvOSBuild/CroMagRally/Assets.xcassets/App Icon & Top Shelf Image.brandassets/App Icon - App Store.imagestack/Back.imagestacklayer/Content.imageset/: Contents.json
tvOSBuild/CroMagRally/Assets.xcassets/App Icon & Top Shelf Image.brandassets/App Icon.imagestack/Back.imagestacklayer/Content.imageset/: Contents.json
tvOSBuild/CroMagRally/Assets.xcassets/App Icon & Top Shelf Image.brandassets/Top Shelf Image Wide.imageset/: Contents.json
tvOSBuild/CroMagRally/Assets.xcassets/App Icon & Top Shelf Image.brandassets/Top Shelf Image.imageset/: Contents.json
tvOSBuild/CroMagRally/Assets.xcassets/AppIcon.appiconset/: Contents.json
